2023-07-30T16:08:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5707169193 # 1771
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 4 30
* notice: prev accum: outdated-unq outdated-all / unq all: 1427 4856 / 1445 4886
* notice: next accum: outdated-unq outdated-all / unq all: 1427 4856 / 1445 4887
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-30]

2023-07-30T08:08:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5705117237 # 1770
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 4 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1427 4856 / 1444 4885
* notice: next accum: outdated-unq outdated-all / unq all: 1427 4856 / 1445 4886
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-16 2023-07-30]

2023-07-29T16:08:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5701334899 # 1768
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-29
* notice: last 14d: unq all: 4 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1426 4854 / 1444 4884
* notice: next accum: outdated-unq outdated-all / unq all: 1427 4856 / 1444 4885
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-07-15] / [2023-07-29]

2023-07-29T08:08:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5699382732 # 1767