@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-30T16:08:34Z",
-  "count_outdated" : 4856,
-  "uniques_outdated" : 1427,
+  "timestamp" : "2023-07-31T00:46:13Z",
+  "count_outdated" : 4858,
+  "uniques_outdated" : 1428,
   "count" : 4887,
   "uniques" : 1445,
   "clones" : [
-    {
-      "timestamp": "2023-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-17T00:00:00Z",
       "count": 3,
